--- a/.github/workflows/main_praktikum-web-2.yml
+++ b/.github/workflows/main_praktikum-web-2.yml
@@ -45,7 +45,7 @@ jobs:
         run: npm run build
 
       - name: Zip artifact for deployment
-        run: zip -r release.zip . -x "node_modules/*" ".git/*"
+        run: zip -r release.zip . -x "node_modules/*" ".git/*" "tests/*" "resources/js/*"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
