--- a/.github/workflows/main_praktikum-web-2.yml
+++ b/.github/workflows/main_praktikum-web-2.yml
@@ -28,6 +28,11 @@ jobs:
         with:
           node-version: '18'
 
+      - name: Install npm dependencies and build frontend
+        run: |
+          npm install
+          npm run build
+
       - name: Check if composer.json exists
         id: check_files
         uses: andstor/file-existence-action@v1
@@ -38,14 +43,8 @@ jobs:
         if: steps.check_files.outputs.files_exists == 'true'
         run: composer validate --no-check-publish && composer install --prefer-dist --no-progress
 
-      - name: Install Node dependencies
-        run: npm install
-
-      - name: Build Vite assets
-        run: npm run build
-
       - name: Zip artifact for deployment
-        run: zip -r release.zip . -x "node_modules/*" ".git/*" "tests/*" "resources/js/*"
+        run: zip -r release.zip . -x "node_modules/*" ".git/*"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
